--- a/.i3/config
+++ b/.i3/config
@@ -32,7 +32,7 @@ floating_modifier $mod
 workspace_layout stacking
 
 # see: http://i3wm.org/docs/userguide.html#_automatic_back_and_forth_when_switching_to_the_current_workspace
-workspace_auto_back_and_forth yes
+#workspace_auto_back_and_forth yes
 
 hide_edge_borders none
 
