HexChat changes and finally fixed mimeapps

--- a/.config/hexchat/hexchat.conf
+++ b/.config/hexchat/hexchat.conf
@@ -1,4 +1,4 @@
-version = 2.11.0
+version = 2.10.1
 away_auto_unmark = 0
 away_omit_alerts = 1
 away_reason = I'm busy
@@ -74,7 +74,7 @@ gui_tab_icons = 1
 gui_tab_layout = 0
 gui_tab_newtofront = 2
 gui_tab_pos = 6
-gui_tab_scrollchans = 0
+gui_tab_scrollchans = 1
 gui_tab_server = 1
 gui_tab_small = 0
 gui_tab_sort = 0
@@ -102,14 +102,14 @@ gui_ulist_sort = 0
 gui_ulist_style = 1
 gui_url_mod = 0
 gui_usermenu = 0
-gui_win_height = 1010
+gui_win_height = 1009
 gui_win_fullscreen = 0
 gui_win_left = 0
 gui_win_modes = 1
 gui_win_save = 1
 gui_win_state = 0
 gui_win_swap = 0
-gui_win_top = 38
+gui_win_top = 39
 gui_win_ucount = 0
 gui_win_width = 1676
 identd = 1
@@ -185,7 +185,7 @@ text_autocopy_stamp = 0
 text_autocopy_text = 1
 text_background = 
 text_color_nicks = 0
-text_font = DejaVu Sans Mono for Powerline 12
+text_font = DejaVu Sans Mono 12
 text_font_main = Monospace 9
 text_font_alternative = Arial Unicode MS,Lucida Sans Unicode,MS Gothic,Unifont
 text_indent = 1
