HexChat update; now using synapse with i3

--- a/.config/hexchat/colors.conf
+++ b/.config/hexchat/colors.conf
@@ -33,7 +33,7 @@ color_31 = cfcf cfcf c2c2
 color_256 = f4f4 f4f4 f2f2
 color_257 = 4949 4848 3e3e
 color_258 = cfcf cfcf c2c2
-color_259 = 1a8f 1a8f 1a8f
+color_259 = 1ef8 1ef8 1ef8
 color_260 = e6e6 dbdb 7474
 color_261 = fdfd 9797 1f1f
 color_262 = a6a6 e2e2 2e2e
