--- a/.i3/config
+++ b/.i3/config
@@ -51,8 +51,11 @@ bindsym $mod+Print exec --no-startup-id scrot
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+p exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -fn 'DejaVu Sans Mono-10' -h 20"
-bindsym $mod+Shift+p exec --no-startup-id dmenu_run -i -fn 'DejaVu Sans Mono-10' -h 20
+#bindsym $mod+p exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -fn 'DejaVu Sans Mono-10' -h 20"
+#bindsym $mod+Shift+p exec --no-startup-id dmenu_run -i -fn 'DejaVu Sans Mono-10' -h 20
+bindsym $mod+p exec --no-startup-id synapse
+bindsym $mod+Shift+p exec --no-startup-id synapse
+bindsym $mod+grave exec --no-startup-id synapse
 
 # Change focus
 bindsym $mod+h focus left
