--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ Videos
 *.gitconfig
 
 workbench.*
+
+# JetBrains
+.IntelliJIdea14/system
+.IntelliJIdea14/restart
+
+.PyCharm40/system
+.PyCharm40/restart
+
+.WebStorm9/system
+.WebStorm9/restart
