--- a/.i3/config
+++ b/.i3/config
@@ -57,6 +57,8 @@ bindsym $mod+p exec --no-startup-id synapse
 bindsym $mod+Shift+p exec --no-startup-id synapse
 bindsym $mod+grave exec --no-startup-id synapse
 
+bindsym $mod+c exec /usr/bin/chromium --show-app-list
+
 # Change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -223,7 +225,7 @@ client.urgent           #2f343a #900000 #ffffff #900000
 
 for_window [title="^[T|t][E|e][S|s][T|t][I|i][N|n][G|g]$"] floating enable
 
-for_window [class="[C|c]hromium"] border none
+for_window [class="[C|c]hromium" title="Chromium$"] border none
 
 for_window [class="[q|Q]alculate"] floating enable
 for_window [class="[s|S]kype" title="Options"] floating enable
@@ -248,6 +250,7 @@ assign [class="[C|c]hromium"] $WS1
 
 # Pop up windows and task dialogs should open floating
 for_window [window_role="pop-up"] floating enable
+for_window [window_role="bubble"] floating enable
 for_window [window_role="task_dialog"] floating enable
 
 ###
