Better vimrc tabbing and zshrc

--- a/.config/termite/config
+++ b/.config/termite/config
@@ -11,7 +11,8 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = false
-font = Deja Vu Sans Mono for Powerline 12
+#font = Deja Vu Sans Mono for Powerline 12
+font = Consolas for Powerline 13
 scrollback_lines = 1000
 search_wrap = true
 transparency = 0.90
