--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,24 +1,40 @@
+################################################################################
+# BASIC SETTINGS
+################################################################################
+set -g utf8
+set-window-option -g utf8 on
 
 set -g set-titles on
 set -g default-terminal "screen-256color"
 set -g mode-keys vi
 set -g update-environment -r
 
-# POWERLINE
-#
+set -g prefix C-a
+unbind C-b
+# use send-prefix to pass C-a through to application
+bind C-a send-prefix
+
+set-option -g status on                # turn the status bar on
+set -g status-utf8 on                  # set utf-8 for the status bar
+set -g status-interval 5               # set update frequencey (default 15 seconds)
+set -g status-justify centre           # center window list for clarity
+# set-option -g status-position top    # position the status bar at top of screen
+
+# shorten command delay
+set -sg escape-time 1
+
 set-option -g status on
 set-option -g status-interval 1
-#set-option -g status-utf8 on
-#set-option -g status-justify "centre"
+set-option -g status-justify "centre"
 #set-option -g status-left-length 60
 #set-option -g status-right-length 90
 #set-option -g status-left "#(~/.powerline/powerline.sh left)"
 #set-option -g status-right "#(~/.powerline/powerline.sh right)"
 
-#set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
-#bind C-[ run '~/.powerline/mute_powerline.sh left'      # Mute left statusbar.
-#bind C-] run '~/.powerline/mute_powerline.sh right'     # Mute right statusbar.
 
+################################################################################
+# WINDOW BINDS
+################################################################################
 bind-key v split-window -v # split pane horizontally
 bind-key s split-window -h # split pane vertically
 bind-key h split-window -h # split pane vertically
@@ -31,6 +47,12 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+bind C-n next-window
+bind C-p previous-window
+
+# Same as Vim, semicolon is prompt
+bind-key \; command-prompt
 
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -46,4 +68,45 @@ bind-key C-j resize-pane -D 5
 bind-key C-k resize-pane -U 5
 bind-key C-l resize-pane -R 5
 
-bind-key r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+################################################################################
+# COLORS
+################################################################################
+# set pane colors - highlight the active pane
+#set-option -g pane-border-fg colour235 #base02
+#set-option -g pane-active-border-fg colour240 #base01
+
+# colorize messages in the command line
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
+
+# visual notification of activity in other windows
+setw -g monitor-activity on
+set -g visual-activity on
+
+# set color for status bar
+set-option -g status-bg colour235 #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr dim
+
+# set window list colors - red for active and cyan for inactive
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg colour236
+set-window-option -g window-status-attr dim
+
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg colour237
+#set-window-option -g window-status-current-attr bright
+
+################################################################################
+# STATUS BAR TEXT
+################################################################################
+# show host name and IP address on left side of status bar
+set -g status-left-length 70
+set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+
+# show session name, window & pane number, date and time on right side of
+# status bar
+set -g status-right-length 60
+set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: "
