--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,8 @@ unbind C-b
 # use send-prefix to pass C-a through to application
 bind C-a send-prefix
 
+set -g base-index 1
+
 set-option -g status on                # turn the status bar on
 set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
@@ -68,6 +70,11 @@ bind-key C-j resize-pane -D 5
 bind-key C-k resize-pane -U 5
 bind-key C-l resize-pane -R 5
 
+bind C-S-h resize-pane -L 5
+bind C-S-j resize-pane -D 5
+bind C-S-k resize-pane -U 5
+bind C-S-l resize-pane -R 5
+
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 ################################################################################
@@ -78,8 +85,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #set-option -g pane-active-border-fg colour240 #base01
 
 # colorize messages in the command line
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set-option -g message-bg colour124 #base02
+set-option -g message-fg colour254 #orange
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
