Vim style selections in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,8 @@ set-option -g status-justify "centre"
 ################################################################################
 # WINDOW BINDS
 ################################################################################
+bind-key -t vi-copy 'v' begin-selection
+
 bind-key v split-window -v # split pane horizontally
 bind-key s split-window -h # split pane vertically
 bind-key h split-window -h # split pane vertically
