--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,8 +94,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #set-option -g pane-active-border-fg colour240 #base01
 
 # colorize messages in the command line
-set-option -g message-bg colour124 #base02
-set-option -g message-fg colour254 #orange
+set-option -g message-bg black #base02
+set-option -g message-fg colour160 #orange
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
