Color changes, ipython in vim, and some aliases

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,9 @@
 set -g utf8
 set-window-option -g utf8 on
 
+set -g mode-mouse on
 set -g mouse-select-pane on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 set -g set-titles on
 set -g default-terminal "screen-256color"
@@ -27,9 +29,6 @@ set -g status-justify centre           # center window list for clarity
 # shorten command delay
 set -sg escape-time 1
 
-set-option -g status on
-set-option -g status-interval 1
-set-option -g status-justify "centre"
 #set-option -g status-left-length 60
 #set-option -g status-right-length 90
 #set-option -g status-left "#(~/.powerline/powerline.sh left)"
@@ -77,10 +76,11 @@ bind-key C-j resize-pane -D 5
 bind-key C-k resize-pane -U 5
 bind-key C-l resize-pane -R 5
 
-bind C-S-h resize-pane -L 5
-bind C-S-j resize-pane -D 5
-bind C-S-k resize-pane -U 5
-bind C-S-l resize-pane -R 5
+
+bind-key -n C-S-h resize-pane -L 5
+bind-key -n C-S-j resize-pane -D 5
+bind-key -n C-S-k resize-pane -U 5
+bind-key -n C-S-l resize-pane -R 5
 
 bind C-i find-window "irssi"
 
@@ -96,6 +96,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # colorize messages in the command line
 set-option -g message-bg black #base02
 set-option -g message-fg colour160 #orange
+set-option -g message-fg brightred #orange
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
