vim buffer switching, reorganized i3, tmux page up

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,9 @@ set -sg escape-time 1
 ################################################################################
 unbind p
 bind p paste-buffer
+#bind -n PageUp copy-mode -u
+bind -n S-PageUp copy-mode -u
+bind -n S-Up copy-mode -u
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
