--- a/.tmux.conf
+++ b/.tmux.conf
@@ -85,7 +85,7 @@ bind-key -n C-S-j resize-pane -D 5
 bind-key -n C-S-k resize-pane -U 5
 bind-key -n C-S-l resize-pane -R 5
 
-bind C-i find-window "irssi"
+bind C-i find-window "weechat "
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
@@ -94,7 +94,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 ################################################################################
 # set pane colors - highlight the active pane
 #set-option -g pane-border-fg colour235 #base02
-#set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-active-border-fg colour88 #base01
 
 # colorize messages in the command line
 set-option -g message-bg black #base02
