flipped window keys to match irc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,8 +59,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind C-n next-window
-bind C-p previous-window
+# Flip these for actually no reason
+bind C-n previous-window
+bind C-p next-window
 
 # Same as Vim, semicolon is prompt
 bind-key \; command-prompt
