tmux shift page down

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,6 +43,9 @@ bind p paste-buffer
 #bind -n PageUp copy-mode -u
 bind -n S-PageUp copy-mode -u
 bind -n S-Up copy-mode -u
+bind -n S-PageDown copy-mode -u
+bind -n S-Down copy-mode -u
+
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
