Some really nice changes (how many times do my commit messages say that...)

--- a/.config/hexchat/hexchat.conf
+++ b/.config/hexchat/hexchat.conf
@@ -1,5 +1,5 @@
-version = 2.10.2
-away_auto_unmark = 0
+version = 2.11.0
+away_auto_unmark = 1
 away_omit_alerts = 1
 away_reason = I'm busy
 away_show_once = 1
@@ -65,18 +65,19 @@ gui_pane_right_size_min = 80
 gui_quit_dialog = 0
 gui_search_pos = 0
 gui_slist_fav = 0
-gui_slist_select = 0
+gui_slist_select = 31
 gui_slist_skip = 1
 gui_tab_chans = 1
 gui_tab_dialogs = 1
 gui_tab_dots = 0
 gui_tab_icons = 1
 gui_tab_layout = 0
+gui_tab_middleclose = 1
 gui_tab_newtofront = 2
 gui_tab_pos = 6
 gui_tab_scrollchans = 1
 gui_tab_server = 1
-gui_tab_small = 0
+gui_tab_small = 1
 gui_tab_sort = 0
 gui_tab_trunc = 20
 gui_tab_utils = 0
@@ -102,21 +103,21 @@ gui_ulist_sort = 0
 gui_ulist_style = 1
 gui_url_mod = 0
 gui_usermenu = 0
-gui_win_height = 857
+gui_win_height = 854
 gui_win_fullscreen = 0
 gui_win_left = 0
 gui_win_modes = 1
 gui_win_save = 1
 gui_win_state = 0
 gui_win_swap = 0
-gui_win_top = 41
+gui_win_top = 44
 gui_win_ucount = 0
 gui_win_width = 1596
 identd = 1
+identd_port = 0
 input_balloon_chans = 0
 input_balloon_hilight = 1
 input_balloon_priv = 0
-input_balloon_time = 20
 input_beep_chans = 0
 input_beep_hilight = 0
 input_beep_priv = 0
@@ -142,21 +143,21 @@ irc_id_ntext =
 irc_id_ytext = 
 irc_invisible = 0
 irc_join_delay = 8
-irc_logging = 0
+irc_logging = 1
 irc_logmask = %n/%c.log
-irc_nick1 = sange
-irc_nick2 = sange_
-irc_nick3 = sange__
+irc_nick1 = TorvusBug
+irc_nick2 = TorvusBugs
+irc_nick3 = TorvusBog
 irc_nick_hilight = 
 irc_no_hilight = NickServ,ChanServ,InfoServ,N,Q
 irc_notice_pos = 0
 irc_part_reason = Leaving
 irc_quit_reason = Leaving
 irc_raw_modes = 0
-irc_real_name = realname
+irc_real_name = TorvusBug
 irc_servernotice = 0
 irc_skip_motd = 0
-irc_user_name = sange
+irc_user_name = TorvusBug
 irc_wallops = 0
 irc_who_join = 1
 irc_whois_front = 1
@@ -185,7 +186,7 @@ text_autocopy_stamp = 0
 text_autocopy_text = 1
 text_background = 
 text_color_nicks = 1
-text_font = DejaVu Sans Mono 13
+text_font = Source Code Pro 13
 text_font_main = Monospace 9
 text_font_alternative = Arial Unicode MS,Lucida Sans Unicode,MS Gothic,Unifont
 text_indent = 1
