--- a/.config/termite/config
+++ b/.config/termite/config
@@ -13,6 +13,7 @@ urgent_on_bell = true
 clickable_url = false
 #font = Deja Vu Sans Mono for Powerline 12
 font = Consolas for Powerline 13
+#font = FontAwesome 13
 #font = Source Code Pro,Medium 11
 scrollback_lines = 8000
 search_wrap = true
