--- a/.i3/config
+++ b/.i3/config
@@ -171,17 +171,17 @@ client.focused_inactive #333333 #5f676a #ffffff #484e50
 client.unfocused        #333333 #222222 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
 
-set $WS1 1
-set $WS2 2
+set $WS1 1:
+set $WS2 2:
 set $WS3 3
 set $WS4 4
 set $WS5 5
-set $WS6 6:
-set $WS7 7:
-set $WS8 8:
+set $WS6 6:
+set $WS7 7:
+set $WS8 8:
 set $WS9 9
 set $WS0 0
-set $WSgame 20:
+set $WSgame 20:
 
 # Next are the configurations for which windows should float.
 # Sadly, until I figure out a dynamic way to do this, we'll have to enter tham all in
@@ -207,7 +207,6 @@ for_window [class="[t|T]ermite"] border pixel 2
 
 assign [class="[H|h]exchat"] $WS6
 assign [class="[s|S]team"] $WS8
-assign [class="[H|h]exchat"] $WS6
 
 assign [class="^dota"] $WSgame
 assign [class="^csgo"] $WSgame
@@ -231,14 +230,16 @@ for_window [window_role="task_dialog"] floating enable
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  font pango:DejaVu Sans Mono, Icons 10
+  font pango:Source Code Pro, FontAwesome 10
 
   strip_workspace_numbers yes
   position top
   workspace_buttons yes
-#status_command i3status -c ~/.i3/status
+  #status_command i3status -c ~/.i3/status
   status_command i3conky
+
   mode dock
+
   colors {
     background #000000
       statusline #ffffff
