--- a/workspace/systemd/system/suspendlock.service
+++ b/workspace/systemd/system/suspendlock.service
@@ -11,7 +11,7 @@ Description=i3lock at suspend time
 Before=sleep.target
 
 [Service]
-User=%I
+User=nick
 Type=forking
 Environment=DISPLAY=:0
 WorkingDirectory=/usr/local/bin/i3lock-fancy
