--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,7 @@ set -sg escape-time 1
 unbind p
 bind p paste-buffer
 #bind -n PageUp copy-mode -u
+bind -n C-[ copy-mode -u
 bind -n S-PageUp copy-mode -u
 bind -n S-Up copy-mode -u
 bind -n S-PageDown copy-mode -u
