--- a/.compton.conf
+++ b/.compton.conf
@@ -114,7 +114,9 @@ active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
 alpha-step = 0.06;
-opacity-rule = ["90:class_g = 'Termite'"];
+opacity-rule = [
+  "95:class_g = 'Termite'"
+];
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
@@ -190,7 +192,7 @@ vsync = "opengl-swc";
 # Reported to have no effect, though.
 dbe = false;
 # Painting on X Composite overlay window. Recommended.
-paint-on-overlay = true;
+#paint-on-overlay = true;
 
 # Limit compton to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
@@ -226,7 +228,7 @@ wintypes:
         # shadow: Give those windows shadow
         shadow = false;
         # opacity: Default opacity for the type of windows.
-        opacity = 0.85;
+        opacity = 0.90;
         # focus: Whether to always consider windows of this type focused.
         focus = true;
     };
