--- a/.config/hexchat/colors.conf
+++ b/.config/hexchat/colors.conf
@@ -37,6 +37,6 @@ color_259 = 1ef8 1ef8 1ef8
 color_260 = e6e6 dbdb 7474
 color_261 = fdfd 9797 1f1f
 color_262 = a6a6 e2e2 2e2e
-color_263 = 6666 d9d9 efef
+color_263 = 0000 a2df c208
 color_264 = 7575 7171 5e5e
 color_265 = f9f9 2626 7272
