--- a/.config/hexchat/hexchat.conf
+++ b/.config/hexchat/hexchat.conf
@@ -1,4 +1,4 @@
-version = 2.11.0
+version = 2.10.2
 away_auto_unmark = 1
 away_omit_alerts = 1
 away_reason = I'm busy
@@ -72,7 +72,6 @@ gui_tab_dialogs = 1
 gui_tab_dots = 0
 gui_tab_icons = 1
 gui_tab_layout = 0
-gui_tab_middleclose = 1
 gui_tab_newtofront = 2
 gui_tab_pos = 6
 gui_tab_scrollchans = 1
@@ -83,7 +82,7 @@ gui_tab_trunc = 20
 gui_tab_utils = 0
 gui_throttlemeter = 1
 gui_topicbar = 1
-gui_transparency = 255
+gui_transparency = 240
 gui_tray = 1
 gui_tray_away = 0
 gui_tray_blink = 1
@@ -103,21 +102,21 @@ gui_ulist_sort = 0
 gui_ulist_style = 1
 gui_url_mod = 0
 gui_usermenu = 0
-gui_win_height = 854
+gui_win_height = 853
 gui_win_fullscreen = 0
 gui_win_left = 0
 gui_win_modes = 1
 gui_win_save = 1
 gui_win_state = 0
 gui_win_swap = 0
-gui_win_top = 44
+gui_win_top = 45
 gui_win_ucount = 0
 gui_win_width = 1596
 identd = 1
-identd_port = 0
 input_balloon_chans = 0
 input_balloon_hilight = 1
 input_balloon_priv = 0
+input_balloon_time = 20
 input_beep_chans = 0
 input_beep_hilight = 0
 input_beep_priv = 0
