--- a/.i3/config
+++ b/.i3/config
@@ -35,9 +35,9 @@ bindsym $mod+Print exec --no-startup-id scrot
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 #bindsym $mod+p exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -fn 'DejaVu Sans Mono-10' -h 20"
-#bindsym $mod+Shift+p exec --no-startup-id dmenu_run -i -fn 'DejaVu Sans Mono-10' -h 20
+bindsym $mod+Shift+p exec --no-startup-id dmenu_run -i -fn 'Source Code Pro-12' -h 20
 bindsym $mod+p exec --no-startup-id synapse
-bindsym $mod+Shift+p exec --no-startup-id synapse
+#bindsym $mod+Shift+p exec --no-startup-id synapse
 #bindsym $mod+grave exec --no-startup-id synapse
 
 #bindsym $mod+c exec /usr/bin/chromium --show-app-list
@@ -80,14 +80,14 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+n exec nautilus
 
 # Volume keys
-set $dzvol dzvol -bg '#222222' -fg '#FFFFFF' -fn 'Deja Vu Sans Mono 12' &
+set $dzvol dzvol -bg '#222222' -fg '#FFFFFF' -fn 'Source Code Pro 12' &
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -qD pulse set Master 2%+ unmute && $dzvol
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer -qD pulse set Master 2%- unmute && $dzvol
 bindsym XF86AudioMute exec --no-startup-id amixer -qD pulse set Master toggle && $dzvol
 bindsym XF86AudioMicMute exec --no-startup-id amixer -qD pulse set Capture toggle
 
 # quickswitch.py
-set $dmenu dmenu -i -b -l 20 -fn 'DejaVu Sans Mono-12' -x 40 -y 40 -w 512 -h 24 -p
+set $dmenu dmenu -i -b -l 20 -fn 'Source Code Pro-12' -x 40 -y 40 -w 512 -h 24 -p
 bindsym $mod+Shift+w exec --no-startup-id quickswitch.py --dmenu="$dmenu 'windows'"
 bindsym $mod+Shift+o exec --no-startup-id quickswitch.py --dmenu "$dmenu 'windows'"
 bindsym $mod+m exec --no-startup-id quickswitch.py --dmenu "$dmenu 'move here'" -m
@@ -138,7 +138,7 @@ bindsym $mod+Shift+0 move container to workspace $WS0
 bindsym $mod+Shift+g move container to workspace $WSgame
 
 # Lock screen
-bindsym $mod+Delete exec --no-startup-id $HOME/.local/bin/_lock
+bindsym $mod+Delete exec --no-startup-id cd /usr/local/bin/i3lock-fancy/lock && ./lock
 
 # Restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
@@ -230,7 +230,7 @@ for_window [window_role="task_dialog"] floating enable
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  font pango:Source Code Pro, FontAwesome 10
+  font pango:Source Code Pro, FontAwesome 11
 
   strip_workspace_numbers yes
   position top
