--- a/.i3/config
+++ b/.i3/config
@@ -15,7 +15,7 @@ floating_modifier $mod
 workspace_layout stacking
 
 # see: http://i3wm.org/docs/userguide.html#_automatic_back_and_forth_when_switching_to_the_current_workspace
-#workspace_auto_back_and_forth yes
+workspace_auto_back_and_forth yes
 
 hide_edge_borders none
 
@@ -119,6 +119,8 @@ bindsym $mod+8 workspace $WS8
 bindsym $mod+9 workspace $WS9
 bindsym $mod+0 workspace $WS0
 bindsym $mod+g workspace $WSgame
+
+bindsym $mod+i workspace $WS6
 
 # Switching workspaces with tab
 bindsym $mod+Tab workspace next
@@ -237,6 +239,7 @@ bar {
   workspace_buttons yes
   #status_command i3status -c ~/.i3/status
   status_command i3conky
+  #i3bar_command ~/.local/tmp/lemonbar/i3_lemonbar.sh
 
   mode dock
 
