tmux config and terminator

--- a/dotfiles/.config/terminator/config
+++ b/dotfiles/.config/terminator/config
@@ -14,6 +14,7 @@
   prev_tab = <Primary><Shift>Tab
   reset = ""
   reset_clear = ""
+  layout_launcher = ""
 [profiles]
   [[default]]
     background_color = "#2e3440"
