Commit to working with tmux more, inside Alacritty

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -13,6 +13,8 @@ bind C-a send-prefix
 # Start window numbering at 1
 set -g base-index 1
 
+set -ga word-separators ",│`|:\"' ()[]{}<>"
+
 #bind -t vi-copy 'v' begin-selection
 #bind -t vi-copy 'y' copy-selection
 
