Add alacritty, update xfce

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -13,7 +13,12 @@ bind C-a send-prefix
 # Start window numbering at 1
 set -g base-index 1
 
+set -g clock-mode-style 12
+
 set -ga word-separators ",│`|:\"' ()[]{}<>"
+
+set -wg status-left-length 256
+set -wg status-right-length 256
 
 #bind -t vi-copy 'v' begin-selection
 #bind -t vi-copy 'y' copy-selection
@@ -58,6 +63,9 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
+bind -n C-Tab next-window
+bind -n C-S-Tab previous-window
+
 bind -n M-Left select-pane -L
 bind -n M-Down select-pane -D
 bind -n M-Up select-pane -U
@@ -67,6 +75,8 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D 
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
+
+set -ga status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %A, %b %d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %l:%M %p #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #H "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
