--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -6,10 +6,14 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g mouse on
 
+set-option -gw xterm-keys on
+set-option -gw mode-keys vi
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind C-a send-prefix
+
 # Start window numbering at 1
 set -g base-index 1
 
@@ -20,13 +24,15 @@ set -ga word-separators ",│`|:\"' ()[]{}<>"
 set -wg status-left-length 256
 set -wg status-right-length 256
 
-#bind -t vi-copy 'v' begin-selection
-#bind -t vi-copy 'y' copy-selection
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 bind C-s split-window -v -c '#{pane_current_path}'
 bind C-v split-window -h -c '#{pane_current_path}'
 
-set-window-option -g xterm-keys on
+bind-key M choose-tree -Zw "join-pane -t '%%'"
+bind-key C-m choose-tree -Zs "join-pane -t '%%'"
+
 set -g bell-action none
 set -g visual-bell off
 
@@ -34,8 +40,10 @@ set-option -g history-limit 10000
 
 set -g @thumbs-contrast 1
 
-set -g @thumbs-regexp-1 '[a-z]+@[a-z]+.com' # Match emails
+set -g @thumbs-regexp-1 '[a-z0-9\.]+@[a-z]+\.(?:com|net|org|edu|io)' # Match emails
 set -g @thumbs-regexp-2 '[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:' # Match Mac Addresses
+set -g @thumbs-regexp-2 '\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}' # Match IP Addresses
+#set -g @thumbs-regexp-2 '[a-f0-9]{8,64}' # Match arbitrary hashes
 set -g @thumbs-regexp-3 'Vlan\d+' # match Vlan interface on network devices
 set -g @thumbs-regexp-4 "Vlan\\d+" # alternative method of defining regexp
 set -g @thumbs-regexp-5 Vlan\\d+ # alternative method of defining regexp
@@ -47,24 +55,25 @@ bind r source-file ~/.tmux.conf
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+bind -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+    "bind -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+    "bind -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+bind -T copy-mode-vi 'C-h' select-pane -L
+bind -T copy-mode-vi 'C-j' select-pane -D
+bind -T copy-mode-vi 'C-k' select-pane -U
+bind -T copy-mode-vi 'C-l' select-pane -R
+bind -T copy-mode-vi 'C-\' select-pane -l
 
-bind -n C-Tab next-window
-bind -n C-S-Tab previous-window
+# TODO: These aren't working... Have to use C-a p/n
+bind C-Tab next-window
+bind C-S-Tab previous-window
 
 bind -n M-Left select-pane -L
 bind -n M-Down select-pane -D
@@ -76,7 +85,7 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-set -ga status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %A, %b %d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %l:%M %p #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #H "
+set status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %A, %b %d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %l:%M %p #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #H "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
