Prefix status line in tmux

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -71,7 +71,7 @@ bind -T copy-mode-vi 'C-k' select-pane -U
 bind -T copy-mode-vi 'C-l' select-pane -R
 bind -T copy-mode-vi 'C-\' select-pane -l
 
-# TODO: These aren't working... Have to use C-a p/n
+# TODO: These aren't working... Have to use C-a p/n for prev/next
 bind C-Tab next-window
 bind C-S-Tab previous-window
 
@@ -85,7 +85,11 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-set status-right "#{prefix_highlight}#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %A, %b %d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]#[fg=white,bg=brightblack] %l:%M %p #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore]#[fg=black,bg=cyan,bold] #H "
+# If statements: #{?condition,TRUE,FALSE}
+# Inside and if statement, you can't use comma to combine style blocks (those #[] sections),
+# so just create multiple next to each other.
+# Escaping comma doesn't work (ie: \,)
+set status-right "#{?client_prefix,#[bold]#[fg=cyan]#[fg=black]#[bg=cyan]#[bg=cyan] Prefix #[fg=brightblack]#[bg=cyan],#[bg-black]}#{prefix_highlight}#[fg=brightblack,nobold]#[fg=white,bg=brightblack] %A, %b %d #[fg=white,bg=brightblack]#[fg=white,bg=brightblack] %l:%M %p #[fg=cyan,bg=brightblack]#[fg=black,bg=cyan,bold] #H "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
