--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -36,10 +36,9 @@ bind-key C-m choose-tree -Zs "join-pane -t '%%'"
 set -g bell-action none
 set -g visual-bell off
 
-set-option -g history-limit 10000
+set-option -g history-limit 20000
 
 set -g @thumbs-contrast 1
-
 set -g @thumbs-regexp-1 '[a-z0-9\.]+@[a-z]+\.(?:com|net|org|edu|io)' # Match emails
 set -g @thumbs-regexp-2 '[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:' # Match Mac Addresses
 set -g @thumbs-regexp-2 '\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}' # Match IP Addresses
@@ -71,6 +70,8 @@ bind -T copy-mode-vi 'C-k' select-pane -U
 bind -T copy-mode-vi 'C-l' select-pane -R
 bind -T copy-mode-vi 'C-\' select-pane -l
 
+#bind M-v choose-buffer
+
 # TODO: These aren't working... Have to use C-a p/n for prev/next
 bind C-Tab next-window
 bind C-S-Tab previous-window
@@ -86,7 +87,7 @@ bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
 # If statements: #{?condition,TRUE,FALSE}
-# Inside and if statement, you can't use comma to combine style blocks (those #[] sections),
+# Inside an if statement, you can't use comma to combine style blocks (those #[] sections),
 # so just create multiple next to each other.
 # Escaping comma doesn't work (ie: \,)
 set status-right "#{?client_prefix,#[bold]#[fg=cyan]#[fg=black]#[bg=cyan]#[bg=cyan] Prefix #[fg=brightblack]#[bg=cyan],#[bg-black]}#{prefix_highlight}#[fg=brightblack,nobold]#[fg=white,bg=brightblack] %A, %b %d #[fg=white,bg=brightblack]#[fg=white,bg=brightblack] %l:%M %p #[fg=cyan,bg=brightblack]#[fg=black,bg=cyan,bold] #H "
