--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -3,6 +3,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'arcticicestudio/nord-tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g mouse on
 
@@ -82,7 +83,7 @@ bind -n M-Up select-pane -U
 bind -n M-Right select-pane -R
 
 bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
+bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
