Nice diff, tmux, nvim

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -25,11 +25,14 @@ set -ga word-separators ",│`|:\"' ()[]{}<>"
 set -wg status-left-length 256
 set -wg status-right-length 256
 
-bind -T copy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
 
 bind C-s split-window -v -c '#{pane_current_path}'
 bind C-v split-window -h -c '#{pane_current_path}'
+
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 bind-key M choose-tree -Zw "join-pane -t '%%'"
 bind-key C-m choose-tree -Zs "join-pane -t '%%'"
@@ -69,7 +72,7 @@ bind -T copy-mode-vi 'C-h' select-pane -L
 bind -T copy-mode-vi 'C-j' select-pane -D
 bind -T copy-mode-vi 'C-k' select-pane -U
 bind -T copy-mode-vi 'C-l' select-pane -R
-bind -T copy-mode-vi 'C-\' select-pane -l
+#bind -T copy-mode-vi 'C-\' select-pane -l
 
 #bind M-v choose-buffer
 
