--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -42,6 +42,7 @@ set -g visual-bell off
 
 set-option -g history-limit 20000
 
+set -g @thumbs-command 'echo -n {} | xclip -sel clip'
 set -g @thumbs-contrast 1
 set -g @thumbs-regexp-1 '[a-z0-9\.]+@[a-z]+\.(?:com|net|org|edu|io)' # Match emails
 set -g @thumbs-regexp-2 '[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:' # Match Mac Addresses
@@ -50,6 +51,7 @@ set -g @thumbs-regexp-2 '\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}' # Match IP Addresse
 set -g @thumbs-regexp-3 'Vlan\d+' # match Vlan interface on network devices
 set -g @thumbs-regexp-4 "Vlan\\d+" # alternative method of defining regexp
 set -g @thumbs-regexp-5 Vlan\\d+ # alternative method of defining regexp
+
 
 unbind r
 bind r source-file ~/.tmux.conf
