--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -12,7 +12,7 @@ set-option -gw mode-keys vi
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-a
+#set-option -g prefix C-a
 bind C-a send-prefix
 
 # Start window numbering at 1
