--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -9,6 +9,7 @@ set -g mouse on
 
 set-option -gw xterm-keys on
 set-option -gw mode-keys vi
+set -g default-terminal "screen-256color"
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
