Update vimrc and some tmux stuff

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -12,9 +12,9 @@ set-option -gw mode-keys vi
 set -g default-terminal "screen-256color"
 
 # remap prefix from 'C-b' to 'C-a'
-unbind C-b
+#unbind C-b
 #set-option -g prefix C-a
-bind C-a send-prefix
+#bind C-a send-prefix
 
 # Start window numbering at 1
 set -g base-index 1
@@ -79,9 +79,11 @@ bind -T copy-mode-vi 'C-l' select-pane -R
 
 #bind M-v choose-buffer
 
-# TODO: These aren't working... Have to use C-a p/n for prev/next
-bind C-Tab next-window
-bind C-S-Tab previous-window
+# TODO: These aren't working... Have to use C-b p/n for prev/next
+#bind C-Tab next-window
+#bind C-S-Tab previous-window
+
+bind-key C-u copy-mode -u
 
 bind -n M-Left select-pane -L
 bind -n M-Down select-pane -D
