--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -11,6 +11,9 @@ set-option -gw xterm-keys on
 set-option -gw mode-keys vi
 set -g default-terminal "screen-256color"
 
+#set -g default-terminal "xterm-24bit"
+#set -g terminal-overrides ',xterm-24bit:Tc'
+
 # remap prefix from 'C-b' to 'C-a'
 #unbind C-b
 #set-option -g prefix C-a
