--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -9,7 +9,10 @@ set -g mouse on
 
 set-option -gw xterm-keys on
 set-option -gw mode-keys vi
-set -g default-terminal "screen-256color"
+
+#set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # remap prefix from 'C-b' to 'C-a'
 #unbind C-b
@@ -76,6 +79,8 @@ bind -T copy-mode-vi 'C-j' select-pane -D
 bind -T copy-mode-vi 'C-k' select-pane -U
 bind -T copy-mode-vi 'C-l' select-pane -R
 #bind -T copy-mode-vi 'C-\' select-pane -l
+
+bind -n C-M-l send-keys C-l
 
 #bind M-v choose-buffer
 
