--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -2,8 +2,14 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'arcticicestudio/nord-tmux'
+#set -g @plugin 'catppuccin/tmux#v1.0.3'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+#set -g @catppuccin_flavor 'mocha'
+#set -g @catppuccin_window_status_style "none"
+#set -g @catppuccin_status_left_separator "█"
+#set -g @catppuccin_status_right_separator "█"
 
 set -g mouse on
 
@@ -50,11 +56,11 @@ set -g @thumbs-command 'echo -n {} | xclip -sel clip'
 set -g @thumbs-contrast 1
 set -g @thumbs-regexp-1 '[a-z0-9\.]+@[a-z]+\.(?:com|net|org|edu|io)' # Match emails
 set -g @thumbs-regexp-2 '[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:[a-f0-9]{2}:' # Match Mac Addresses
-set -g @thumbs-regexp-2 '\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}' # Match IP Addresses
-#set -g @thumbs-regexp-2 '[a-f0-9]{8,64}' # Match arbitrary hashes
-set -g @thumbs-regexp-3 'Vlan\d+' # match Vlan interface on network devices
-set -g @thumbs-regexp-4 "Vlan\\d+" # alternative method of defining regexp
-set -g @thumbs-regexp-5 Vlan\\d+ # alternative method of defining regexp
+set -g @thumbs-regexp-3 '\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}' # Match IP Addresses
+set -g @thumbs-regexp-4 '[a-f0-9]{8,64}' # Match arbitrary hashes
+set -g @thumbs-regexp-5 'Vlan\d+' # match Vlan interface on network devices
+set -g @thumbs-regexp-6 "Vlan\\d+" # alternative method of defining regexp
+set -g @thumbs-regexp-7 Vlan\\d+ # alternative method of defining regexp
 
 
 unbind r
@@ -105,6 +111,21 @@ bind -n M-l select-pane -R
 # so just create multiple next to each other.
 # Escaping comma doesn't work (ie: \,)
 set status-right "#{?client_prefix,#[bold]#[fg=cyan]#[fg=black]#[bg=cyan]#[bg=cyan] Prefix #[fg=brightblack]#[bg=cyan],#[bg-black]}#{prefix_highlight}#[fg=brightblack,nobold]#[fg=white,bg=brightblack] %A, %b %d #[fg=white,bg=brightblack]#[fg=white,bg=brightblack] %l:%M %p #[fg=cyan,bg=brightblack]#[fg=black,bg=cyan,bold] #H "
+
+# set -g status-left ""
+# set -g  status-right "#{E:@catppuccin_status_application}"
+# set -ag status-right "#{E:@catppuccin_status_session}"
+# set -ag status-right "#{E:@catppuccin_status_user}"
+# set -ag status-right "#{E:@catppuccin_status_host}"
+# set -ag status-right "#{E:@catppuccin_status_date_time}"
+
+#run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# For TPM, instead use `run ~/.config/tmux/plugins/tmux/catppuccin.tmux`
+
+# Make the status line pretty and add some modules
+#set -g status-left ""
+#set -g status-right "#{E:@catppuccin_status_user}"
+#set -ag status-right "#{E:@catppuccin_status_directory}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
