Big vim config changes
Also include some long-requested tmux changes: splitting a window opens
it in the current window's directory

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -38,8 +38,9 @@ set -wg status-right-length 256
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
 
-bind C-s split-window -v -c '#{pane_current_path}'
-bind C-v split-window -h -c '#{pane_current_path}'
+bind % split-window -h -c '#{pane_current_path}'
+bind '"' split-window -v -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
 
 bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'y' send -X copy-selection-and-cancel
